[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Paulo Vitor <paulovitor_pe@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.42.3"
torch = "^2.3.1"
ipywidgets = "^8.1.3"
torchaudio = "^2.3.1"
librosa = "^0.10.2.post1"
wandb = "^0.17.4"
python-dotenv = "^1.0.1"
accelerate = "^0.32.1"
diffusers = "^0.29.2"
torchtune = "^0.1.1"
matplotlib = "^3.9.1"
setuptools = "69.5.1"
gdown = "^5.2.0"
torch-summary = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
